--- a/starter-code/views/main-layout.ejs
+++ b/starter-code/views/main-layout.ejs
@@ -11,10 +11,15 @@
       <h1>Color App</h1>
     <%- body %>
       <nav>
+        <a href="/">Home</a>
+        <a href="/color-list">Color-List</a>
+        <a href="/green">The Greens</a>
+        <a href="/blue">The Blues</a>
+        <a href="/red">The Reds</a>
       </nav>
     </header>
     <footer>
     </footer>
-    
+
   </body>
 </html>
