--- a/starter-code/views/my-master-layout.ejs
+++ b/starter-code/views/my-master-layout.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
     <title>Web Colors App</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
