--- a/starter-code/views/main-layout.ejs
+++ b/starter-code/views/main-layout.ejs
@@ -11,11 +11,13 @@
       <h1>Color App</h1>
     <%- body %>
       <nav>
-        <a href="/">Home</a>
-        <a href="/color-list">Color-List</a>
-        <a href="/green">The Greens</a>
-        <a href="/blue">The Blues</a>
-        <a href="/red">The Reds</a>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/colors">Color-List</a></li>
+          <li><a href="/green">The Greens</a></li>
+          <li><a href="/blue">The Blues</a></li>
+          <li><a href="/red">The Reds</a></li>
+        </ul>
       </nav>
     </header>
     <footer>
