--- a/starter-code/views/homepage.ejs
+++ b/starter-code/views/homepage.ejs
@@ -5,5 +5,5 @@
 </div>
 
 <div class="home-img">
-  <img src="/images/color-screenshot.png" />
+  <a href="/colors"><img src="/images/color-screenshot.png" /></a>
 </div>
