--- a/starter-code/views/homepage.ejs
+++ b/starter-code/views/homepage.ejs
@@ -1,9 +1,14 @@
-<h2 style="color:black;font-size:58px;">Web Colors App</h2>
-<div class="menu">
-  <a href="/colors">Library of Colors</a>
-  <a href="/random-color">Random Color</a>
+
+<div class="container top">
+  <h2 class="main-title">
+    <span class="web">Web</span> <span class="colors">Colors</span> <span class="app">App</span>
+  </h2>
+</div>
+<div class="container menu">
+  <a class="btn btn-outline-primary" role="button" href="/colors">Library of Colors</a>
+  <a class="btn btn-outline-primary" role="button" href="/random-color">Random Color</a>
 </div>
 
-<div class="home-img">
+<!-- <div class="home-img">
   <a href="/colors"><img src="/images/color-screenshot.png" /></a>
-</div>
+</div> -->
