--- a/views/master-layout.ejs
+++ b/views/master-layout.ejs
@@ -13,16 +13,16 @@
     <h1>Gradients.io</h1>
 
     <nav>
-      <a href="/"> Home </a>
+      <a class="navigation" href="/"> Home </a>
         <br>
 
-        <a href="/colors"> Colors </a>
+        <a class="navigation" href="/colors"> Colors </a>
           <br>
 
-          <a href="/purple"> Purple Colors </a>
+          <a class="navigation" href="/purple"> Purple Colors </a>
           <br>
 
-          <a href="/green"> Green Colors </a>
+          <a class="navigation" href="/green"> Green Colors </a>
     </nav>
 
 
