--- a/views/color-views.ejs
+++ b/views/color-views.ejs
@@ -4,9 +4,11 @@
 
 <ul>
   <% colorList.forEach((oneColor) => { %>
-    <div class="littlediv" style="background-color: <%= oneColor.hex %>; color:<%= oneColor.hex %>;"> "" </div>
-    <li> <%= oneColor.keyword %> </li>
-    <li>      <%= oneColor.hex %> </li>
+    <div class="littlediv" style="background-color: <%= oneColor.hex %>; color:<%= oneColor.hex %>">
+    <li class="colorname"> <%= oneColor.keyword %> </li>
+    <li class="colorcode"> <%= oneColor.hex %> </li>
+    <div class=" <%= oneColor.hex %>"></div>
+    </div>
   <% }) %>
 </ul>
 </div>
