--- a/views/green-colors.ejs
+++ b/views/green-colors.ejs
@@ -6,11 +6,12 @@
 
 <% colorList.forEach((oneColor) => { %>
    <% if (oneColor.category === "green") { %>
-     <div class="littlediv" style="background-color: <%= oneColor.hex %>; color:<%= oneColor.hex %>;"> "" </div>
-   <li> <%= oneColor.keyword %> </li>
-   <li> <%= oneColor.hex %> </li>
+     <div class="littlediv" style="background-color: <%= oneColor.hex %>; color:<%= oneColor.hex %>;">
+   <li class="colorname"> <%= oneColor.keyword %> </li>
+   <li class="colorcode"> <%= oneColor.hex %> </li>
    <div class=" <%= oneColor.hex %>"></div>
 <% } %>
+</div>
 <% }) %>
 </ul>
-</div
+</div>
