--- a/views/home-view.ejs
+++ b/views/home-view.ejs
@@ -1,3 +1,3 @@
-<h2>HOME</h2>
+<h2 class= "homeh2">HOME</h2>
 
-<p> This app displays beautiful color options for your website</p>
+<p class="homepara"> This app displays beautiful color options for your website</p>
